--- a/Week5/Week5.vcxproj.filters
+++ b/Week5/Week5.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="rectangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GCD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
