--- a/Week5/Week5.vcxproj
+++ b/Week5/Week5.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GCD.cpp" />
+    <ClCompile Include="lastNum.cpp" />
     <ClCompile Include="rectangle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
